@@ -113,7 +113,7 @@ Now it is time to replace the <i>sysvinit</i> <tt>/sbin/init</tt> binary:
 The last step is to do the final reboot to boot the system with the new
 default Unix process no 1 <i>runit</i>.
 <pre>
- # shutdown -r now
+ # init 6
 </pre>
 To report success:
 <pre>
